@@ -6,6 +6,7 @@
     * 3841 cups_queues: thresholds are now configurable in WATO...
     * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
     * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
+    * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
 
     WATO:
     * 3915 User access times: New icon when never logged in; New column "last seen"
